--- a/Creditz-Angular-src/analyst-registration/analyst-registration.component.html
+++ b/Creditz-Angular-src/analyst-registration/analyst-registration.component.html
@@ -1,5 +1,6 @@
 
 <!-- <div style="display: box; width: 90%; min-width: 400px;height:90%"> -->
+    <div *ngIf="this.storeRole=='Admin' and this.store!=null">
     <mat-sidenav-container  >
     
         <mat-sidenav #start mode="side" opened >
@@ -130,7 +131,7 @@
                     <br>
                 </div>
             
-                <button type="submit" class="btn btn-primary">Register</button>
+                <button type="submit"  [disabled]="personForm.form.invalid" class="btn btn-primary">Register</button>
                 </form>
                     
             </div>
@@ -171,6 +172,7 @@
                 </mat-toolbar-row>
             </mat-toolbar> -->
         </mat-sidenav-container>
+    </div>
         <!-- </div> -->
         <router-outlet></router-outlet>
     
