--- a/Creditz-Angular-src/organization-creditor-table-list/organization-creditor-table-list.component.html
+++ b/Creditz-Angular-src/organization-creditor-table-list/organization-creditor-table-list.component.html
@@ -1,5 +1,6 @@
 
 <!-- <div style="display: box; width: 90%; min-width: 400px;height:90%"> -->
+  <div *ngIf="this.storeRole=='Admin' and this.store!=null">
   <mat-sidenav-container  >
     
     <mat-sidenav #start mode="side" opened >
@@ -156,6 +157,7 @@
             </mat-toolbar-row>
         </mat-toolbar> -->
     </mat-sidenav-container>
+    </div>
     <!-- </div> -->
     <router-outlet></router-outlet>
 
