--- a/Creditz-Angular-src/schedular/schedular.component.html
+++ b/Creditz-Angular-src/schedular/schedular.component.html
@@ -1,4 +1,4 @@
-
+<div *ngIf="this.storeRole=='Admin' and this.store!=null">
 <mat-sidenav-container>
     
     <mat-sidenav #start mode="side" opened >
@@ -68,5 +68,6 @@
     </mat-sidenav-content>
 
     </mat-sidenav-container>
+    </div>
     <router-outlet></router-outlet>
        
