--- a/Creditz-Angular-src/show-analyst/show-analyst.component.html
+++ b/Creditz-Angular-src/show-analyst/show-analyst.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="this.storeRole=='Admin' and this.store!=null">
 <mat-sidenav-container  >
     
   <mat-sidenav #start mode="side" opened >
@@ -128,6 +129,7 @@
           </mat-toolbar-row>
       </mat-toolbar> -->
   </mat-sidenav-container>
+  </div>
   
   <router-outlet></router-outlet>
 
