--- a/Creditz-Angular-src/contact-us/contact-us.component.html
+++ b/Creditz-Angular-src/contact-us/contact-us.component.html
@@ -6,24 +6,28 @@
   </div>
 </div>
 
-<div style="float:left; align: left; max-width:30%; margin-left:5%"><br>
-<h1>Corporate Office</h1><br>
+<div class="container-black">
+
+<div class="left">
+<br><h1>Corporate Office</h1><br>
 <h4>8668 creditz Center Dr.<br>
 India (456001)<br>
 </h4></div>
 
-<div style=" max-width:30%; top:68%; left:45%; position: absolute;"> 
-<h1>Direct Contact</h1><br>
+<div class="center"> 
+<br><h1>Direct Contact</h1><br>
 <h4>Phone: 720.974.7878<br>
 Toll Free: 1.877.929.7878<br>
 Email: info@creditz.co.in</h4><br>
 </div>
 
-<div style="float:right; align: right; max-width:30% margin-right:5%">
+<div class="right">
 <br><h1>Departments</h1><br>
 <h4>customerservice@creditz.co.in<br>
 disputes@creditz.co.in<br>
 compliance@creditz.co.in<br>
 careers@creditz.co.in<br>
 </h4>
+</div>
+
 </div>
