--- a/Creditz-Angular-src/footer/footer.component.html
+++ b/Creditz-Angular-src/footer/footer.component.html
@@ -18,12 +18,9 @@
                             <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
                                 <h3 class="f-title f_600 t_color f_size_18">Download</h3>
                                 <ul class="list-unstyled f_list">
-                                    <li><a href="#">Company</a></li>
-                                    <li><a href="#">Android App</a></li>
-                                    <li><a href="#">ios App</a></li>
-                                    <li><a href="#">Desktop</a></li>
-                                    <li><a href="#">Projects</a></li>
-                                    <li><a href="#">My tasks</a></li>
+                                    <li><a download="aboutUs" target="_blank" href="/assets/aboutUs.pdf">Our Broucher</a></li>
+                                    <li><a download="ProjectDetails" target="_blank" href="/assets/projectDetails.pdf">Projects Details</a></li>
+                                    <li><a download="MyTask" target="_blank" href="/assets/myTask.pdf">My tasks</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -31,12 +28,9 @@
                             <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
                                 <h3 class="f-title f_600 t_color f_size_18">Help</h3>
                                 <ul class="list-unstyled f_list">
-                                    <li><a href="#">FAQ</a></li>
-                                    <li><a href="#">Term &amp; conditions</a></li>
-                                    <li><a href="#">Reporting</a></li>
-                                    <li><a href="#">Documentation</a></li>
-                                    <li><a href="#">Support Policy</a></li>
-                                    <li><a href="#">Privacy</a></li>
+                                    <li><a download="MyTask" target="_blank" href="/assets/myTask.pdf">Reporting</a></li>
+                                    <li><a download="ProjectDetails" target="_blank" href="/assets/projectDetails.pdf">Documentation</a></li>
+                                    <li><a download="DatabaseConfiguration" target="_blank" href="/assets/DatabaseConfiguration.pdf">Privacy</a></li>
                                 </ul>
                             </div>
                         </div>
