--- a/Creditz-Angular-src/header/header.component.html
+++ b/Creditz-Angular-src/header/header.component.html
@@ -20,7 +20,7 @@
         <a class="nav-link" href="faq" >  FAQ  </a>
       </li> -->
 
-     <li class="nav-item" >
+     <li class="dropdown" >
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="policy">  Our Policies  </a>
           <div class="dropdown-menu" aria-labelledby="policy">
             <a class="dropdown-item" href="individual-user">Individual Policies</a>
