--- a/Creditz-Angular-src/home/home.component.html
+++ b/Creditz-Angular-src/home/home.component.html
@@ -9,10 +9,19 @@
   vertical-align: middle;
   line-height: normal;">
 <font size="32" style="text-align:middle; vertical-align: middle;"  >C₹ED!TZ  </font><br>
-<font size="4" style="text-align:middle; vertical-align: middle;"  ><a href="aboutUs">About Us  </a></font>
+<font size="4" style="text-align:middle; vertical-align: middle;"  ><a href="#aboutUs">About Us  </a></font>
 <font size="4" style="text-align:middle; vertical-align: middle;"  >|</font>
 <font size="4" style="text-align:middle; vertical-align: middle;"  ><a href="contactUs"> Contact Us </a></font>
 
 
   </span>
 </div>
+
+<div id="aboutUs">
+<app-about-us ></app-about-us>
+</div>
+
+<!--<div id="contactUs">
+<app-contact-us></app-contact-us>
+</div>-->
+
