--- a/Creditz-Angular-src/individual-user/individual-user.component.html
+++ b/Creditz-Angular-src/individual-user/individual-user.component.html
@@ -1,3 +1,7 @@
+<div style="max-width:50">
+<button class="birdButton" (click)="goToUrl('individual-user/individual-user-application')">Apply Here</button>
+</div>
+
 <div style="min-width: 40%; margin-right:5%; width: 60%; float: right; align: right" >
 <!--<br>
 ABOUT Personal User Policies(key points)<br>
@@ -12,7 +16,6 @@ ABOUT Personal User Policies(key points)<br>
 
 
 <div id="wrap">
-
 
 <div class="container">
   <img src="assets/blank.png" alt="" style="width:2%; height:1%">
@@ -35,11 +38,12 @@ ABOUT Personal User Policies(key points)<br>
                               2. 11.5% intrest rate on individual Loan<br><br>
                               3. Un-Secured loans<br><br>
                               4. Loans for you startup ideas.<br><br>
+                              5. Want to start Startup? We are here<br><br>
+
                             </p>
                         </div>
                         <div class="col-md-6 col-right">
-                            <p  style="color:white;">                                
-                            5. Want to start Startup? We are here<br><br>
+                            <p  style="color:white;">      
                             6. What are our screening POLICY<br><br>
                             7. Check your Emi by yourself before Applying! because we care about your credit score!<br>
                             </p>
@@ -52,15 +56,30 @@ ABOUT Personal User Policies(key points)<br>
         </section>
     </div>
 
+
+<!--===========================================================-->
+
+
+
+
+
+
+
+
+
+
+
+<!--===========================================================-->
+
 			</div>
 
-   <div class="container-login100-form-btn" >
+ <!--  <div class="container-login100-form-btn" >
       <button class="login100-form-btn" (click)="goToUrl('individual-user/individual-user-application')">Apply Here!</button>
     </div>
-
+-->
 </div>
 
-<div style=" display:block; float: left; max-width:25%" >
+<div style=" display:block; float: left; max-width:25%; margin-left:5%" >
 
 <div class="limiter">
 		<div class="container-login100"><br>
@@ -84,7 +103,7 @@ ABOUT Personal User Policies(key points)<br>
   						<span class="focus-input100"></span>
     </div>
 
-    <label aTilt><br>EMI: {{this.calculateEMI(calculatorModel.principle,calculatorModel.tenure)}}</label>
+    <label aTilt><br>Your EMI Per Month: {{this.calculateEMI(calculatorModel.principle,calculatorModel.tenure)}}</label>
 
 
     </form>
