--- a/Creditz-Angular-src/app/adminsidenav/adminsidenav.component.html
+++ b/Creditz-Angular-src/app/adminsidenav/adminsidenav.component.html
@@ -52,7 +52,11 @@
         </mat-sidenav-content>
    
         </mat-sidenav-container>
-        </div>
+    </div>
+    <div *ngIf="this.store==null">
+     <app-login></app-login>
+    </div>
+       
         <router-outlet></router-outlet>
     
     
