--- a/Creditz-Angular-src/app/schedular/schedular.component.html
+++ b/Creditz-Angular-src/app/schedular/schedular.component.html
@@ -69,5 +69,8 @@
 
     </mat-sidenav-container>
     </div>
+    <div *ngIf="this.store==null">
+        <app-login></app-login>
+     </div>
     <router-outlet></router-outlet>
        
