--- a/Creditz-Angular-src/app/show-analyst/show-analyst.component.html
+++ b/Creditz-Angular-src/app/show-analyst/show-analyst.component.html
@@ -130,6 +130,9 @@
       </mat-toolbar> -->
   </mat-sidenav-container>
   </div>
+  <div *ngIf="this.store==null">
+  <app-login></app-login>
+  </div>
   
   <router-outlet></router-outlet>
 
