--- a/Creditz-Angular-src/app/analyst-registration/analyst-registration.component.html
+++ b/Creditz-Angular-src/app/analyst-registration/analyst-registration.component.html
@@ -68,10 +68,10 @@
                <br>
                    
                 </div>
-                <form #personForm="ngForm"  (ngSubmit)="onSubmit1()" novalidate>
+                <form #personForm="ngForm"  (ngSubmit)="onSubmit1()"  novalidate>
                     <div class="form-group">
                     <input type="email"   #email="ngModel" name="c_mail" class="form-control" id="t2" 
-                    placeholder="Email Address"
+                    placeholder="Email Address" (change)="emailCheckUnique()"
                     pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
                     [class.is-invalid]="email.invalid && email.touched"
                     placeholder="Enter email" name="pemail" 
@@ -85,10 +85,17 @@
                     Email is required.
                     </small> 
                     </div>
+
+                    <div *ngIf="emailAlreadyExist!=''" class="text-danger">
+                        <small>{{emailAlreadyExist}} </small>
+                    
+                    </div>
+                    
                     <br>
                 </div>
                     
                 <div class="form-group">
+                    <show-hide-password size="sm" btnStyle="primary" [btnOutline]="false">
                     <input type="password" 
                     #password="ngModel" 
                     class="form-control"
@@ -98,6 +105,7 @@
                     [(ngModel)]="userModel1.password" 
                     required id="t3"
                     placeholder="Password">
+                </show-hide-password>
                     <div *ngIf="password.invalid && (password.dirty || password.touched)"
                     class="text-danger">
                     <small *ngIf="password.errors.required">
@@ -111,6 +119,8 @@
                 </div>
                         
                  <div class="form-group">
+
+                    <show-hide-password size="sm" btnStyle="primary" [btnOutline]="false">
                     <input type="password" 
                     class="form-control" 
                     id="t4" 
@@ -120,6 +130,7 @@
                     [class.is-invalid]="confirmpassword.invalid && confirmpassword.touched && confirmpassword.errors?.notEqual" 
                     name="cpsw" 
                     ngModel required>
+                   </show-hide-password>
                     <div *ngIf="confirmpassword.invalid && (confirmpassword.dirty || confirmpassword.touched)"
                     class="text-danger">
                     <small *ngIf="confirmpassword.errors.required">
@@ -130,8 +141,8 @@
                     </div>
                     <br>
                 </div>
-            
-                <button type="submit"  [disabled]="personForm.form.invalid" class="btn btn-primary">Register</button>
+                
+                <button type="submit"  [disabled]="personForm.form.invalid|| emailAlreadyExist!=''" class="btn btn-primary">Register</button>
                 </form>
                     
             </div>
@@ -172,7 +183,10 @@
                 </mat-toolbar-row>
             </mat-toolbar> -->
         </mat-sidenav-container>
-    </div>
+    </div> 
+     <div *ngIf="this.store==null">
+     <app-login></app-login>
+     </div> 
         <!-- </div> -->
         <router-outlet></router-outlet>
     
