--- a/Creditz-Angular-src/app/financial-analyst/financial-analyst.component.css
+++ b/Creditz-Angular-src/app/financial-analyst/financial-analyst.component.css
@@ -1,28 +1,18 @@
-
-
-
-
-
-
-
-
-
-
-
 table {
   width: 100%;
 }
 
 tr.example-detail-row {
   height: 0;
+  color:black;
 }
 
 tr.example-element-row:not(.example-expanded-row):hover {
-  background: whitesmoke;
+  background:blue;
 }
 
 tr.example-element-row:not(.example-expanded-row):active {
-  background: #efefef;
+  background:whitesmoke;
 }
 
 .example-element-row td {
@@ -34,21 +24,6 @@ tr.example-element-row:not(.example-expanded-row):active {
   display: flex;
 }
 
-.example-element-diagram {
-  min-width: 80px;
-  border: 2px solid black;
-  padding: 8px;
-  font-weight: lighter;
-  margin: 8px 0;
-  height: 104px;
-}
-
-.example-element-symbol {
-  font-weight: bold;
-  font-size: 40px;
-  line-height: normal;
-}
-
 .example-element-description {
   padding: 16px;
 }
@@ -57,40 +32,21 @@ tr.example-element-row:not(.example-expanded-row):active {
   opacity: 0.5;
 }
 
-mat-header-cell 
+/* mat-header-cell 
  {
   font-family:'Times New Roman', Times, serif;
   font-size: 15px;color: darkblue; 
   }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .creditor-panel {
   max-width: 400px;
   margin: 30%;
   
-}
+} */
 
 h1{
   font-family: 'Times New Roman', Times, serif;
-  font-size: 30px;color: darkblue;
+  font-size: 30px;
 }
 .mat-tab-group {
   margin-bottom: auto;
@@ -121,7 +77,26 @@ color:black;
  th{
    font-size: 18px;
    color: darkblue;
+   font-family: 'Times New Roman', Times, serif;
  }
 
+ .container {
+   height: max-content;
+
+}
+
+
+
+.image{
+height:400%;
+width:100%;
+
+/* position: relativ; */
+/* background-size: 200%; */
+/* border-top-right-radius: 10cm ; */
+
+/* //float: left;
+background-attachment: scroll; */
+}
 
 
