--- a/Creditz-Angular-src/app/header/header.component.html
+++ b/Creditz-Angular-src/app/header/header.component.html
@@ -12,9 +12,10 @@
         <a class="nav-link" href="home" >      Home  </a>
       </li>
             
-      <li class="nav-item">
-        <a class="nav-link" href="aboutUs" >      About   Us  </a>
+      <li class="nav-item" *ngIf="this.store!=null">
+        <a class="nav-link" href="user-history" >     Applications  </a>
       </li>
+
 
       <!--<li class="nav-item">
         <a class="nav-link" href="faq" >  FAQ  </a>
@@ -36,6 +37,7 @@
       <li class="nav-item" *ngIf="this.store!=null">
         <a class="nav-link" (click)="logout()" >  logout  </a>
       </li>
+
 
 
     </ul>
