--- a/Creditz-Angular-src/app/history/history.component.html
+++ b/Creditz-Angular-src/app/history/history.component.html
@@ -1,29 +1,42 @@
-  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" align="center" width=100%>
+  <mat-form-field>
+  <mat-label>Filter</mat-label>
+  <input matInput (keyup)="applyFilter($event)" placeholder="Enter Keyword">
+</mat-form-field>
 
+
+  <div class="example-container mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" matSort matSortActive="applicationId" matSortDirection="asc" matSortDisableClear  align= "center">
   <!-- Position Column -->
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
-    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+  <ng-container matColumnDef="applicationId">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Application Id </th>
+    <td mat-cell *matCellDef="let element"> {{element.applicationId}} </td>
   </ng-container>
 
   <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  <ng-container matColumnDef="loanAmount">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Loan Amount </th>
+    <td mat-cell *matCellDef="let element"> {{element.loanAmount}} </td>
   </ng-container>
 
   <!-- Weight Column -->
-  <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Weight </th>
-    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+  <ng-container matColumnDef="loanTenure">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> loan Tenure </th>
+    <td mat-cell *matCellDef="let element"> {{element.loanTenure}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
-  <ng-container matColumnDef="symbol">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </th>
-    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+  <ng-container matColumnDef="applicationStatus">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Application Status </th>
+    <td mat-cell *matCellDef="let element"> {{element.applicationStatus}} </td>
+  <!--  <div >
+    <td mat-cell *matCellDef="let element"> {{element.applicationStatus}} </td>
+    </div>
+    <div >
+    <td mat-cell *matCellDef="let element"> {{element.applicationStatus}} </td>
+    </div>-->
+
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+   <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+</div>
