final- angular-src

--- a/Creditz-Angular-src/app/individual-user/individual-user.component.css
+++ b/Creditz-Angular-src/app/individual-user/individual-user.component.css
@@ -400,6 +400,9 @@ iframe {
   background: #333333;
 }
 
+.login100-form-btn:disabled{
+  cursor: not-allowed;
+}
 
 
 /*------------------------------------------------------------------
