--- a/Creditz-Angular-src/app/individual-user-application/individual-user-application.component.html
+++ b/Creditz-Angular-src/app/individual-user-application/individual-user-application.component.html
@@ -1,3 +1,97 @@
+<div *ngIf="this.storeRole=='Person' and this.store!=null">
+  <div class="limiter">
+          <H1 mat-dialog-title class=".login100-form-title " aTilt>Your Credit Details</H1><br>
+<mat-dialog-content>
+
+      <div class="wrap-login100">
+
+              <form #application="ngForm" (ngSubmit)="apply()" method="POST" class="login100-form validate-form" style="border:none;" >
+                  
+                      <div class="wrap-input100">
+                        <input 
+                        matTooltip="Enter your PAN"	matTooltipPosition="after"
+                        type="text" placeholder="Pan Card - AAAAA1234A" class="input100" name="pancard" [(ngModel)]="applicationModel.pancard" required>
+                              <span class="focus-input100"></span>
+                      </div>
+
+                          <div class="wrap-input100">
+                        <input 
+                        matTooltip="Enter your Loan Amount"	matTooltipPosition="after"
+                        type="number" placeholder="Loan Amount Required" class="input100" name="loanAmount" [(ngModel)]="applicationModel.loanAmount" required>
+                              <span class="focus-input100"></span>
+                      </div>
+
+                          <div class="wrap-input100">
+                        <input 
+                        matTooltip="Enter your Age"	matTooltipPosition="after"
+                        type="number" placeholder="Your Age" class="input100" name="age" [(ngModel)]="applicationModel.age" required>
+                              <span class="focus-input100"></span>
+                      </div>
+              
+                      <div class="wrap-input100">
+                        <input 
+                        matTooltip="Enter your Occupation"	matTooltipPosition="after"
+                        type="text" placeholder="Your Occupation" class="input100" name="occupation" [(ngModel)]="applicationModel.occupation" required>
+                              <span class="focus-input100"></span>
+                      </div>
+
+                      <div class="wrap-input100">
+                        <input 
+                        matTooltip="Enter your Repayment Duration"	matTooltipPosition="after"
+                        type="number" placeholder="Duration of Repayment- in Months" class="input100" name="loanTenure" [(ngModel)]="applicationModel.loanTenure" required>
+                              <span class="focus-input100"></span>
+                      </div>
+
+                      <div class="wrap-input100">   
+                          <label style="margin:20px">  Enter your Gender: </label><br>
+                              <input type="radio" class="toggle" name="gender" [(ngModel)]="applicationModel.gender" value="Male" style="margin:15px">  Male  <br>
+                              <input type="radio" class="toggle" name="gender" [(ngModel)]="applicationModel.gender" value="Female" style="margin:15px">  Female <br>
+                              <input type="radio" class="toggle" name="gender" [(ngModel)]="applicationModel.gender" value="Other" style="margin:15px">  Other
+                              <span class="focus-input100"></span>
+                      </div>
+
+                      <div class="wrap-input100">   
+                          <label style="margin:20px">  Do you have any past criminal records: </label><br>
+                              <input type="radio" class="toggle" name="criminalRecord" [(ngModel)]="applicationModel.criminalRecord" value=0 style="margin:15px">  No  <br>
+                              <input type="radio" class="toggle" name="criminalRecord" [(ngModel)]="applicationModel.criminalRecord" value=1 style="margin:15px">  Yes <br>
+                              <span class="focus-input100"></span>
+                      </div>
+
+                      <div class="wrap-input100">   
+                          <label style="margin:20px">  Are you Bankrupt: </label><br>
+                              <input type="radio" class="toggle" name="bankruptcy" [(ngModel)]="applicationModel.bankruptcy" value=0 style="margin:15px">  No  <br>
+                              <input type="radio" class="toggle" name="bankruptcy" [(ngModel)]="applicationModel.bankruptcy" value=1 style="margin:15px">  Yes <br>
+                              <span class="focus-input100"></span>
+                      </div>
+
+                  <br>
+                      <div class="container-login100-form-btn" >
+                        <button type="submit" class="login100-form-btn"  [disabled]="application.form.invalid">Apply</button>
+                      </div>
+
+          </form>
+
+  </div>
+  </mat-dialog-content>
+ 
+  </div>
+
+
+</div>
+
+<div *ngIf="this.store==null">
+  <mat-dialog-content>
+<app-login></app-login>
+  </mat-dialog-content>
+</div>
+
+
+
+
+<!--
+
+
+
 <div style=" min-width:68%; max-width:68%; float:right; align: right;"   *ngIf="this.storeRole=='Person' and this.store!=null">
             <div class="container" >
               <img src="assets/loan.png" alt="IMG" class="image">
@@ -78,3 +172,5 @@
 <div *ngIf="this.store==null">
 <app-login></app-login>
 </div>
+
+-->
